# OMSI

./: .gitignore  README.md  pyproject.toml  setup.py
OMSI/: HMC.py  __init__.py  _config.py  deconv.py  extract_outputs.py  get_init_sample.py  get_next_spikes.py  make_G_matrix.py  sampler.py  spike_operations.py
fMCSI/: _config.py  deconv.py  get_init_sample.py  helpers.py  make_mean_sample.py  sampler.py
figures/: characterize_optimizations.py  figure1.py  figure2.py  figure3.py  figure4.py  figureS1.py  figureS2.py  figureS3.py  figureS4.py  run_cascade_subprocess.py  run_pnev_MCMC.py  simulation_helpers.py
